update pagination and sorting
