# src/docs/swagger.yaml
@@ -94,6 +94,21 @@ definitions:
       isSuccess:
         type: boolean
     type: object
+  models.PaginatedListResponse:
+    properties:
+      items: {}
+      pagination:
+        $ref: '#/definitions/models.PaginationResponse'
+    type: object
+  models.PaginationResponse:
+    properties:
+      page:
+        type: integer
+      page_size:
+        type: integer
+      total:
+        type: integer
+    type: object
 info:
   contact: {}
   description: API for managing products
@@ -278,7 +293,28 @@ paths:
       - health
   /api/v1/products:
     get:
-      description: Get a list of all products
+      description: Get a list of products with pagination and sorting
+      parameters:
+      - description: Filter by category ID
+        in: query
+        name: category_id
+        type: integer
+      - description: 'Page number (default: 1)'
+        in: query
+        name: page
+        type: integer
+      - description: 'Page size (default: 10)'
+        in: query
+        name: page_size
+        type: integer
+      - description: Sort by field (name, price)
+        in: query
+        name: sort_by
+        type: string
+      - description: Sort direction (asc, desc)
+        in: query
+        name: sort_dir
+        type: string
       produces:
       - application/json
       responses:
@@ -289,9 +325,7 @@ paths:
             - $ref: '#/definitions/models.ApiResponse'
             - properties:
                 data:
-                  items:
-                    $ref: '#/definitions/controllers.ProductResponse'
-                  type: array
+                  $ref: '#/definitions/models.PaginatedListResponse'
               type: object
         "400":
           description: Bad Request
@@ -426,7 +460,24 @@ paths:
       - products
   /api/v1/users:
     get:
-      description: Get a list of all users
+      description: Get a paginated list of all users
+      parameters:
+      - description: 'Page number (default: 1)'
+        in: query
+        name: page
+        type: integer
+      - description: 'Page size (default: 10)'
+        in: query
+        name: page_size
+        type: integer
+      - description: Sort by field (username, email)
+        in: query
+        name: sort_by
+        type: string
+      - description: Sort direction (asc, desc)
+        in: query
+        name: sort_dir
+        type: string
       produces:
       - application/json
       responses:
@@ -437,9 +488,7 @@ paths:
             - $ref: '#/definitions/models.ApiResponse'
             - properties:
                 data:
-                  items:
-                    $ref: '#/definitions/controllers.UserResponse'
-                  type: array
+                  $ref: '#/definitions/models.PaginatedListResponse'
               type: object
         "400":
           description: Bad Request
